# text-insights

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  docker-compose.yaml
loader/: Cargo.toml
loader/src/: main.rs
recog/: Cargo.toml
recog/src/: main.rs
search/: Cargo.toml
search/src/: main.rs
src/: lib.rs  main.rs
src/book/: mod.rs
src/cli/: mod.rs
src/cli/args/: mod.rs
src/cli/env/: mod.rs
src/coreio/: mod.rs
src/coreio/json/: mod.rs
src/database/: mod.rs
src/database/data/: mod.rs
src/database/data/bdb/: mod.rs
src/database/data/ls/: mod.rs
src/database/data/lsj/: mod.rs
src/database/data/strongs/: mod.rs
src/database/query/: mod.rs
src/text/: mod.rs
src/text/greek/: mod.rs
src/text/hebrew/: mod.rs  vowels.rs
ti-core/: Cargo.toml
ti-core/src/: lib.rs
ti-core/src/embedding/: mod.rs
ti-core/src/fs/: mod.rs
ti-core/src/img/: mod.rs
ti-core/src/models/: data_file.rs
