[package]
name = "text-insights"
version = "0.1.0"
authors = ["Jonathan Whittle <jonathan.m.whittle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3"
postgres = "0.19"
unicode-segmentation = "0.1.2"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }