[package]
name = "search"
version = "0.1.0"
edition = "2024"

[dependencies]
ti-core = { path = "../ti-core" }

anyhow.workspace = true
dirs.workspace = true
fastembed.workspace = true
indicatif.workspace = true
memap2.workspace = true
qdrant-client.workspace = true
serde = { version = "1.0", features = ["derive"], workspace = true }
serde_json.workspace = true
simd-json.workspace = true
structopt.workspace = true
tokio.workspace = true
uuid = { version = "1.15.1", features = ["v4"], workspace = true }
